---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stderr
---
warning: <WORKSPACE> unused manifest key: workspace.package.default-run
    Finished `<PROFILE>` profile [<FLAGS>] target(s) in <TIME>
     Running `<WORKSPACE> --entry nonexistent_file.py --stdout`
Error: Failed to read file: "nonexistent_file.py"

Caused by:
    No such file or directory (os error 2)
